fixed logo link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
       <div class="row">
   <div class="col s12 m6 offset-m3">
     <div class="card-panel">
-      <img src="/static1.squarespace.png" alt="" width="100%">
+      <img src="{{ "/static1.squarespace.png" | prepend: site.url }}" alt="" width="100%">
     </div>
   </div>
 </div>
