--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@ layout: default
 <div class="row">
   <div class="col s12 m6 offset-m3">
     <div class="col s3">
-      <h3 class="white-text center-align">Home</h3>
+      <h3 class="white-text center-align"><a href="#">Home</a></h3>
     </div>
     <div class="col s3">
-      <h3 class="white-text center-align">Work</h3>
+      <h3 class="white-text center-align"><a href="#work">Work</a></h3>
     </div>
     <div class="col s3">
-      <h3 class="white-text center-align">About</h3>
+      <h3 class="white-text center-align"><a href="#about">About</a></h3>
     </div>
     <div class="col s3">
-      <h3 class="white-text center-align">Contact</h3>
+      <h3 class="white-text center-align"><a href="#contact">Contact</a></h3>
     </div>
   </div>
 </div>
@@ -34,10 +34,11 @@ layout: default
   </div>
   <div class="section white">
     <div class="row container">
-      <h2 class="header">Work</h2>
+      <div id="work" class="section scrollspy">
+      <h2  class="header">Work</h2>
       <p class="grey-text text-darken-3 lighten-3 flow-text">the key to successful branding is to express yourself in a way that looks, feels, and speaks exactly like you do. strong visual presence and clear communication are essential to create a consistent and cohesive message.
 whether you have a logo that strongly represents you or you need a complete design overhaul - let wekreative take your vision to the next level. our brand development package will give you the tools you need to look as good as you are.</p>
-
+     </div>
     </div>
   </div>
   <div class="parallax-container">
@@ -45,10 +46,11 @@ whether you have a logo that strongly represents you or you need a complete desi
   </div>
   <div class="section white">
     <div class="row container">
-      <h2 class="header">About</h2>
+      <div id="about" class="section scrollspy">
+      <h2  class="header">About</h2>
       <p class="grey-text text-darken-3 lighten-3 flow-text">the key to successful branding is to express yourself in a way that looks, feels, and speaks exactly like you do. strong visual presence and clear communication are essential to create a consistent and cohesive message.
 whether you have a logo that strongly represents you or you need a complete design overhaul - let wekreative take your vision to the next level. our brand development package will give you the tools you need to look as good as you are.</p>
-
+      </div>
     </div>
   </div>
   <div class="parallax-container">
@@ -56,7 +58,8 @@ whether you have a logo that strongly represents you or you need a complete desi
   </div>
   <div class="section white">
     <div class="row container">
-      <h2 class="header">Contact</h2>
+      <div id="contact" class="section scrollspy">
+      <h2  class="header">Contact</h2>
       <div class="row">
    <form class="col s12">
      <div class="row">
@@ -85,12 +88,13 @@ whether you have a logo that strongly represents you or you need a complete desi
      </div>
    </form>
  </div>
-
+     </div>
     </div>
   </div>
 
   <script type="text/javascript">
   $(document).ready(function(){
   $('.parallax').parallax();
+  $('.scrollspy').scrollSpy();
   });
   </script>
