added scrollspy to nav bar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <nav>
   <div class="nav-wrapper">
     <a href="#" class="brand-logo center"><img id="nav-logo" src="{{ "/static1.squarespace.png" | prepend: site.url }}" alt=""></a>
-    <ul id="nav-mobile" class="left hide-on-med-and-down">
+    <ul id="nav-mobile" class="left hide-on-med-and-down section table-of-contents">
       <li><a href="#home">Home</a></li>
       <li><a href="#work">Work</a></li>
       <li><a href="#about">About</a></li>
