--- a/index.html
+++ b/index.html
@@ -17,34 +17,31 @@ layout: default
 <div class="parallax-container">
     <div class="parallax"><img src="https://images.unsplash.com/photo-1465323591784-cdf2503fb5df?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&s=15f18325cf86ad7a334d2e6cedee0711">
     </div>
+    <div  id="home" class="row section scrollspy">
     <div class="container">
       <br>
-      <div  id="home" class="row section scrollspy">
-  <div class="col s12 m6 offset-m3">
-    <div class="card-panel">
-      <img src="{{ "/static1.squarespace.png" | prepend: site.url }}" alt="" width="100%">
+      <div class="col s12 l8 offset-l2">
+      <div class="row valign-wrapper">
+        <div class="col s3">
+          <h4 class="white-text center-align valign"><a href="#">Home</a></h4>
+        </div>
+        <div class="col s3">
+          <h4 class="white-text center-align valign"><a href="#work">Work</a></h4>
+        </div>
+        <div class="col s4">
+          <img class="center-align valign" src="{{ "/WK_Icon.png" | prepend: site.url }}" alt="" width="100%">
+        </div>
+        <div class="col s3">
+          <h4 class="white-text center-align valign"><a href="#about">About</a></h4>
+        </div>
+        <div class="col s3">
+          <h4 class="white-text  valign"><a href="#contact">Contact</a></h4>
+        </div>
+      </div>
+      </div>
+     </div>
     </div>
-  </div>
 </div>
-<div class="row">
-  <div class="col s12 m6 offset-m3">
-    <div class="col s3">
-      <h3 class="white-text center-align"><a href="#">Home</a></h3>
-    </div>
-    <div class="col s3">
-      <h3 class="white-text center-align"><a href="#work">Work</a></h3>
-    </div>
-    <div class="col s3">
-      <h3 class="white-text center-align"><a href="#about">About</a></h3>
-    </div>
-    <div class="col s3">
-      <h3 class="white-text center-align"><a href="#contact">Contact</a></h3>
-    </div>
-  </div>
-</div>
-    </div>
-
-  </div>
   <div class="section white">
     <div class="row container">
       <div id="work" class="section scrollspy">
@@ -66,7 +63,7 @@ whether you have a logo that strongly represents you or you need a complete desi
       </div>
     </div>
   </div>
-  <div class="parallax-container">
+  <div class="parallax-container" style="height: 200px">
     <div class="parallax"><img src="https://source.unsplash.com/random"></div>
   </div>
   <div class="section white">
@@ -88,12 +85,12 @@ whether you have a logo that strongly represents you or you need a complete desi
        </div>
        <div class="input-field col s4">
          <i class="material-icons prefix">mode_edit</i>
-         <input id="email" type="email" class="validate">
-         <label for="email">Subject</label>
+         <input id="subject" type="text" class="validate">
+         <label for="subject">Subject</label>
        </div>
        <div class="input-field col s12">
   <textarea id="textarea1" class="materialize-textarea"></textarea>
-  <label for="textarea1">Textarea</label>
+  <label for="textarea1">Message</label>
 </div>
 <button class="btn-flat waves-effect waves-light" type="submit" name="action">Submit
     <i class="material-icons right">send</i>
@@ -126,9 +123,9 @@ $(document).ready(function(){
 
                // set distance user needs to scroll before we start fadeIn
           if ($(this).scrollTop() > 450) {
-              $('#menu').fadeIn();
+              $('#menu').fadeIn(500);
           } else {
-              $('#menu').fadeOut();
+              $('#menu').fadeOut(500);
           }
       });
   });
