added header text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include nav.html %}
 <div class="parallax-container">
-    <div class="parallax"><img src="https://images.unsplash.com/photo-1465323591784-cdf2503fb5df?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&s=15f18325cf86ad7a334d2e6cedee0711">
+    <div class="parallax"><img src="img/WK_WebBkgrd1920x1080.jpg">
     </div>
     <div  id="home" class="row section scrollspy">
     <div class="container">
@@ -18,7 +18,7 @@ layout: default
           <h4 class="white-text center-align valign"><a href="#work">Work</a></h4>
         </div>
         <div class="col s4">
-          <img class="center-align valign" src="{{ "/WK_Icon.png" | prepend: site.url }}" alt="" width="100%">
+          <img class="center-align valign" src="{{ "/img/wekreative_transWHITE.png" | prepend: site.url }}" alt="" width="100%">
         </div>
         <div class="col s3">
           <h4 class="white-text center-align valign"><a href="#about">About</a></h4>
@@ -27,6 +27,10 @@ layout: default
           <h4 class="white-text  valign"><a href="#contact">Contact</a></h4>
         </div>
       </div>
+      </div>
+      <div class="col s12 l8 offset-l2">
+        <h1 class="center white-text"><b>Wekreative Design Group</b></h1>
+        <h3 id="header-text"class="center white-text"><i>marketing 	• graphics 	• social 	• web</i></h3>
       </div>
      </div>
     </div>
