--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include nav.html %}
 <div class="parallax-container">
-    <div class="parallax"><img src="img/WK_WebBkgrd1920x1080.jpg">
+    <div class="parallax"><img src="img/WK_WebBkgrd1300x620.jpg">
     </div>
     <div  id="home" class="row section scrollspy">
     <div class="container">
@@ -12,19 +12,19 @@ layout: default
       <div class="col s12 l8 offset-l2">
       <div class="row valign-wrapper">
         <div class="col s3">
-          <h4 class="white-text center-align valign"><a href="#">Home</a></h4>
+          <h5 class="white-text center-align valign uppercase"><a href="#">Home</a></h5>
         </div>
         <div class="col s3">
-          <h4 class="white-text center-align valign"><a href="#work">Work</a></h4>
+          <h5 class="white-text center-align valign uppercase"><a href="#work">Work</a></h5>
         </div>
         <div class="col s4">
           <img class="center-align valign" src="{{ "/img/wekreative_transWHITE.png" | prepend: site.url }}" alt="" width="100%">
         </div>
         <div class="col s3">
-          <h4 class="white-text center-align valign"><a href="#about">About</a></h4>
+          <h5 class="white-text center-align valign uppercase"><a href="#about">About</a></h5>
         </div>
         <div class="col s3">
-          <h4 class="white-text  valign"><a href="#contact">Contact</a></h4>
+          <h5 class="white-text  valign uppercase"><a href="#contact">Contact</a></h5>
         </div>
       </div>
       </div>
@@ -40,8 +40,10 @@ layout: default
     <div class="row container">
 
       <h2  class="header">Work</h2>
-      <p class="grey-text text-darken-3 lighten-3">the key to successful branding is to express yourself in a way that looks, feels, and speaks exactly like you do. strong visual presence and clear communication are essential to create a consistent and cohesive message.
-whether you have a logo that strongly represents you or you need a complete design overhaul - let wekreative take your vision to the next level. our brand development package will give you the tools you need to look as good as you are.</p>
+      <p class="grey-text text-darken-3 lighten-3">Wekreative is a boutique design group and we love what we do.
+</p>
+<p>Our goal is to transform your vision into a powerful message that is both conceptually interesting and visually stunning.  We turn your brand into a true reflection of who you are, whether you need a logo that strongly represents you or a complete design overhaul - let wekreative take your ideas to the next level. Our brand development package will give you the tools you need to look as good as you are.
+</p>
   </div>
     {% include slider.html %}
     <br>
