--- a/index.html
+++ b/index.html
@@ -38,72 +38,62 @@ layout: default
   <div class="section white">
 <div id="work" class="section scrollspy">
     <div class="row container">
-
-      <h2  class="header">Work</h2>
-      <p class="grey-text text-darken-3 lighten-3">Wekreative is a boutique design group and we love what we do.
-</p>
-<p>Our goal is to transform your vision into a powerful message that is both conceptually interesting and visually stunning.  We turn your brand into a true reflection of who you are, whether you need a logo that strongly represents you or a complete design overhaul - let wekreative take your ideas to the next level. Our brand development package will give you the tools you need to look as good as you are.
-</p>
+      <h2  class="header center">Get Kreative</h2>
   </div>
-    {% include slider.html %}
-    <br>
-    <div class="row container">
+  <div class="row">
+    <div class="col  s12 m3">
+      <h2 class="center">image</h2>
+    </div>
+    <div class="col  s12 m3">
+      <h2 class="center">image</h2>
+    </div>
+    <div class="col  s12 m3">
+      <h2 class="center">image</h2>
+    </div>
+    <div class="col  s12 m3">
+      <h2 class="center">image</h2>
+    </div>
+    <div class="col  s12 m3">
+      <h2 class="center">image</h2>
+    </div>
+    <div class="col  s12 m3">
+      <h2 class="center">image</h2>
+    </div>
+    <div class="col  s12 m3">
+      <h2 class="center">image</h2>
+    </div>
+    <div class="col  s12 m3">
+      <h2 class="center">image</h2>
+    </div>
+  </div>
+  <div class="container">
     <div class="row">
-      <div class="col s12">
-        <div class="col s12 m4">
-          <div class="card">
-            <div class="card-image">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%282%29.jpg">
-            </div>
-            <div class="card-content">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card">
-            <div class="card-image">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%282%29.jpg">
-            </div>
-            <div class="card-content">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col s12 m4">
-          <div class="card">
-            <div class="card-image">
-              <img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%282%29.jpg">
-            </div>
-            <div class="card-content">
-              <span class="card-title">Card Title</span>
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-          </div>
-        </div>
+      <div class="col s12 m3">
+        <h2 class="center">icon</h2>
       </div>
-     </div>
-     </div>
-  </div>
-</div>
-  <div class="parallax-container">
-    <div class="parallax"><img src="https://source.unsplash.com/random"></div>
-  </div>
-  <div class="section white">
-    <div class="row container">
-      <div id="about" class="section scrollspy">
-      <h2  class="header">About</h2>
-      <p class="grey-text text-darken-3 lighten-3 flow-text">the key to successful branding is to express yourself in a way that looks, feels, and speaks exactly like you do. strong visual presence and clear communication are essential to create a consistent and cohesive message.
-whether you have a logo that strongly represents you or you need a complete design overhaul - let wekreative take your vision to the next level. our brand development package will give you the tools you need to look as good as you are.</p>
+      <div class="col s12 m3">
+        <h2 class="center">icon</h2>
+      </div>
+      <div class="col s12 m3">
+        <h2 class="center">icon</h2>
+      </div>
+      <div class="col s12 m3">
+        <h2 class="center">icon</h2>
       </div>
     </div>
   </div>
-  <div class="parallax-container" style="height: 200px">
-    <div class="parallax"><img src="https://source.unsplash.com/random"></div>
+</div>
+</div>
+  <div class="parallax-container valign-wrapper">
+      <div class="parallax"><img src="img/WK_WebBkgrd1300x620.jpg">
+      </div>
+      <div class="container">
+        <p class="center white-text valign">Qoute</p>
+
+        </div>
+      </div>
+
   </div>
+
+
   {% include contact.html %}
