--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@ layout: default
 ---
 
 {% include nav.html %}
+<!-- <div class="header">
+  <div class="video-container">
+    <video  autoplay volume="0" poster="posterimage.jpg">
+      <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
+
+    </video>
+  </div>
+
+</div>
+ -->
+
 <div class="parallax-container">
-    <div class="parallax"><img src="img/WK_WebBkgrd1300x620.jpg">
+    <div class="parallax"><video  autoplay volume="0" poster="posterimage.jpg">
+      <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
+
+    </video>
     </div>
     <div  id="home" class="row section scrollspy">
     <div class="container">
@@ -89,11 +103,7 @@ layout: default
       </div>
       <div class="container">
         <p class="center white-text valign">Qoute</p>
-
         </div>
       </div>
-
   </div>
-
-
   {% include contact.html %}
