--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
  -->
 
 <div class="parallax-container">
-    <div class="parallax"><video  autoplay volume="0" poster="posterimage.jpg">
+    <div class="parallax"><video  autoplay loop volume="0" poster="posterimage.jpg">
       <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
 
     </video>
@@ -43,7 +43,7 @@ layout: default
       </div>
       </div>
       <div class="col s12 l8 offset-l2">
-        <h1 class="center white-text"><b>Wekreative Design Group</b></h1>
+        <h1 class="center white-text uppercase"><b>Wekreative Design Group</b></h1>
         <h3 id="header-text"class="center white-text"><i>marketing 	• graphics 	• social 	• web</i></h3>
       </div>
      </div>
@@ -56,28 +56,28 @@ layout: default
   </div>
   <div class="row">
     <div class="col  s12 m3">
-      <h2 class="center">image</h2>
+      <img src="img/WK_Web_Icons_1a.png" width="100%" alt="">
     </div>
     <div class="col  s12 m3">
-      <h2 class="center">image</h2>
+      <img src="img/WK_Web_Icons_2a.png" width="100%" alt="">
     </div>
     <div class="col  s12 m3">
-      <h2 class="center">image</h2>
+      <img src="img/WK_Web_Icons_3a.png" width="100%" alt="">
     </div>
     <div class="col  s12 m3">
-      <h2 class="center">image</h2>
+      <img src="img/WK_Web_Icons_4a.png" width="100%" alt="">
     </div>
     <div class="col  s12 m3">
-      <h2 class="center">image</h2>
+      <img src="img/WK_Web_Icons_5a.png" width="100%" alt="">
     </div>
     <div class="col  s12 m3">
-      <h2 class="center">image</h2>
+      <img src="img/WK_Web_Icons_6a.png" width="100%" alt="">
     </div>
     <div class="col  s12 m3">
-      <h2 class="center">image</h2>
+      <img src="img/WK_Web_Icons_7a.png" width="100%" alt="">
     </div>
     <div class="col  s12 m3">
-      <h2 class="center">image</h2>
+      <img src="img/WK_Web_Icons_8a.png" width="100%" alt="">
     </div>
   </div>
   <div class="container">
