added hover effect to icons

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
           <h5 class="white-text center-align valign uppercase"><a href="#work">Work</a></h5>
         </div>
         <div class="col s4">
-          <img class="center-align valign" src="{{ "/img/wekreative_transWHITE.png" | prepend: site.url }}" alt="" width="100%">
+          <img class="center-align valign" src="{{ "/img/wekreative_transGOLD.png" | prepend: site.url }}" alt="" width="100%">
         </div>
         <div class="col s3">
           <h5 class="white-text center-align valign uppercase"><a href="#about">About</a></h5>
@@ -56,28 +56,28 @@ layout: default
   </div>
   <div class="row">
     <div class="col  s12 m3">
-      <img src="img/WK_Web_Icons_1a.png" width="100%" alt="">
+      <img src="img/WK_Web_Icons_1a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_1b.png'" onmouseout="this.src='img/WK_Web_Icons_1a.png'">
     </div>
     <div class="col  s12 m3">
-      <img src="img/WK_Web_Icons_2a.png" width="100%" alt="">
+      <img src="img/WK_Web_Icons_2a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_2b.png'" onmouseout="this.src='img/WK_Web_Icons_2a.png'">
     </div>
     <div class="col  s12 m3">
-      <img src="img/WK_Web_Icons_3a.png" width="100%" alt="">
+      <img src="img/WK_Web_Icons_3a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_3b.png'" onmouseout="this.src='img/WK_Web_Icons_3a.png'">
     </div>
     <div class="col  s12 m3">
-      <img src="img/WK_Web_Icons_4a.png" width="100%" alt="">
+      <img src="img/WK_Web_Icons_4a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_4b.png'" onmouseout="this.src='img/WK_Web_Icons_4a.png'">
     </div>
     <div class="col  s12 m3">
-      <img src="img/WK_Web_Icons_5a.png" width="100%" alt="">
+      <img src="img/WK_Web_Icons_5a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_5b.png'" onmouseout="this.src='img/WK_Web_Icons_5a.png'">
     </div>
     <div class="col  s12 m3">
-      <img src="img/WK_Web_Icons_6a.png" width="100%" alt="">
+      <img src="img/WK_Web_Icons_6a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_6b.png'" onmouseout="this.src='img/WK_Web_Icons_6a.png'">
     </div>
     <div class="col  s12 m3">
-      <img src="img/WK_Web_Icons_7a.png" width="100%" alt="">
+      <img src="img/WK_Web_Icons_7a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_7b.png'" onmouseout="this.src='img/WK_Web_Icons_7a.png'">
     </div>
     <div class="col  s12 m3">
-      <img src="img/WK_Web_Icons_8a.png" width="100%" alt="">
+      <img src="img/WK_Web_Icons_8a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_8b.png'" onmouseout="this.src='img/WK_Web_Icons_8a.png'">
     </div>
   </div>
   <div class="container">
