--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@ layout: default
       </div>
       </div>
       <div class="col s12 l8 offset-l2">
-        <h1 class="center white-text uppercase"><b>Wekreative Design Group</b></h1>
-        <h3 id="header-text"class="center white-text"><i>marketing 	• graphics 	• social 	• web</i></h3>
+        <h1 id="header-name" class="center white-text uppercase">Wekreative Design Group</h1>
+        <h3 id="header-text" class="center white-text" style="letter-spacing: 2px; font-size: 1.5rem"><i>marketing 	• graphics 	• social 	• web</i></h3>
       </div>
      </div>
     </div>
@@ -52,7 +52,7 @@ layout: default
   <div class="section white">
 <div id="work" class="section scrollspy">
     <div class="row container">
-      <h2  class="header center">Get Kreative</h2>
+      <h2  class="header center uppercase"><b>Get Kreative</b></h2>
   </div>
   <div class="row">
     <div class="col  s12 m3">
@@ -80,29 +80,14 @@ layout: default
       <img src="img/WK_Web_Icons_8a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_8b.png'" onmouseout="this.src='img/WK_Web_Icons_8a.png'">
     </div>
   </div>
-  <div class="container">
-    <div class="row">
-      <div class="col s12 m3">
-        <h2 class="center">icon</h2>
-      </div>
-      <div class="col s12 m3">
-        <h2 class="center">icon</h2>
-      </div>
-      <div class="col s12 m3">
-        <h2 class="center">icon</h2>
-      </div>
-      <div class="col s12 m3">
-        <h2 class="center">icon</h2>
-      </div>
-    </div>
-  </div>
+
 </div>
 </div>
-  <div class="parallax-container valign-wrapper">
-      <div class="parallax"><img src="img/WK_WebBkgrd1300x620.jpg">
+  <div id="about" class="parallax-container valign-wrapper section scrollspy" style="background-color: #161616">
+      <div class="parallax">
       </div>
       <div class="container">
-        <p class="center white-text valign">Qoute</p>
+        <p class="center white-text valign flow-text">WEKREATIVE is a full-service marketing firm providing creative solutions for businesses and organization around the globe.  Nothing is more exciting to our team than coming alongside a group of people to  help identify what makes them unique, and then helping them share that story through multiple mediums.  Regardless of the stage of the organization -- proper identification, development and execution of their message is the key to success and longevity.  WEKREATIVE specializes in pushing the status quo and creating awe-inspired results.</p>
         </div>
       </div>
   </div>
