--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@ layout: default
  -->
 
 <div class="parallax-container">
-    <div class="parallax"><video  autoplay loop volume="0" poster="posterimage.jpg">
+    <div class="parallax"><video  autoplay loop volume="0" poster="img/WK_WebBkgrd1300x620.jpg">
       <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
+      <source src="https://" type="video/">
 
     </video>
     </div>
@@ -51,9 +52,12 @@ layout: default
 </div>
   <div class="section white">
 <div id="work" class="section scrollspy">
-    <div class="row container">
-      <h2  class="header center uppercase"><b>Get Kreative</b></h2>
+  <div class="black">
+      <h1 class="header center uppercase white-text">Get Kreative</h1>
+      <p  class="center white-text">At WEKREATIVE, our goal is to provide creative direction, strategic thinking and <br> experienced execution to launch, grow or revitalize your business or organization.</p>
   </div>
+
+
   <div class="row">
     <div class="col  s6 m3">
       <img src="img/WK_Web_Icons_1a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_1b.png'" onmouseout="this.src='img/WK_Web_Icons_1a.png'">
@@ -79,15 +83,29 @@ layout: default
     <div class="col  s6 m3">
       <img src="img/WK_Web_Icons_8a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_8b.png'" onmouseout="this.src='img/WK_Web_Icons_8a.png'">
     </div>
+
+      <div class="col s6 m3 icons">
+        <img src="img/WK_ContractIcons_1.png" alt="" width="100%">
+      </div>
+      <div class="col s6 m3">
+        <img src="img/WK_ContractIcons_3.png" alt="" width="100%">
+      </div>
+      <div class="col s6 m3">
+        <img src="img/WK_ContractIcons_4.png" alt="" width="100%">
+      </div>
+      <div class="col s6 m3">
+        <img src="img/WK_ContractIcons_2.png" alt="" width="100%">
+      </div>
+
   </div>
 
 </div>
 </div>
-  <div id="about" class="parallax-container valign-wrapper section scrollspy" style="background-color: #161616">
+  <div id="about" class="parallax-container valign-wrapper section scrollspy" style="background-color: #161616; height: auto;">
       <div class="parallax">
       </div>
       <div class="container">
-        <p class="center white-text valign flow-text">WEKREATIVE is a full-service marketing firm providing creative solutions for businesses and organization around the globe.  Nothing is more exciting to our team than coming alongside a group of people to  help identify what makes them unique, and then helping them share that story through multiple mediums.  Regardless of the stage of the organization -- proper identification, development and execution of their message is the key to success and longevity.  WEKREATIVE specializes in pushing the status quo and creating awe-inspired results.</p>
+        <p class="center white-text valign flow-text"><b>WEKREATIVE</b> is a full-service marketing firm providing creative solutions for businesses and organization around the globe.  Nothing is more exciting to our team than coming alongside a group of people to  help identify what makes them unique, and then helping them share that story through multiple mediums.  Regardless of the stage of the organization — proper identification, development and execution of their message is the key to success and longevity.  <b>WEKREATIVE</b> specializes in pushing the status quo and creating awe-inspired results.</p>
         </div>
       </div>
   </div>
