removed white line

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
  -->
 
 <div class="parallax-container">
-    <div class="parallax"><video  autoplay loop volume="0" poster="img/WK_WebBkgrd1300x620.jpg">
+    <div class="parallax"><video  autoplay loop volume="0" poster="img/WK_WebBkgrd1920x1080.jpg">
       <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
       <source src="https://" type="video/">
 
@@ -45,13 +45,13 @@ layout: default
       </div>
       <div class="col s12 l8 offset-l2">
         <h1 id="header-name" class="center white-text uppercase">Wekreative Design Group</h1>
-        <h3 id="header-text" class="center white-text" style="letter-spacing: 2px; font-size: 1.5rem"><i>marketing 	• graphics 	• social 	• web</i></h3>
+        <h3 id="header-text" class="center white-text" style="letter-spacing: 2px; font-size: 1.5rem"><i>your team of marketing experts</i></h3>
       </div>
      </div>
     </div>
 </div>
-  <div class="section white">
-<div id="work" class="section scrollspy">
+  <div class="section white get-kreative">
+<div id="work" class="section scrollspy get-kreative">
   <div class="black">
       <h1 class="header center uppercase white-text">Get Kreative</h1>
       <p  class="center white-text">At WEKREATIVE, our goal is to provide creative direction, strategic thinking and <br> experienced execution to launch, grow or revitalize your business or organization.</p>
@@ -86,18 +86,26 @@ layout: default
 
       <div class="col s6 m3 icons">
         <img src="img/WK_ContractIcons_1.png" alt="" width="100%">
+        <h4 class="uppercase center">Month-to-Month</h4>
+        <p class="center">Our work produces immediate results and is produced to afford ultimate flexibility.</p>
       </div>
       <div class="col s6 m3">
         <img src="img/WK_ContractIcons_3.png" alt="" width="100%">
+        <h4 class="uppercase center">No long-term contracts</h4>
+        <p class="center">We believe in relationships, not long-term contracts.  Our work speaks for itself.</p>
       </div>
       <div class="col s6 m3">
         <img src="img/WK_ContractIcons_4.png" alt="" width="100%">
+        <h4 class="uppercase center">A-la-carte</h4>
+        <p class="center">We understand not all organizations require the same services.  Our model is built on offering as much or little as you need.</p>
       </div>
       <div class="col s6 m3">
         <img src="img/WK_ContractIcons_2.png" alt="" width="100%">
+        <h4 class="uppercase center">Cheaper than adding staff</h4>
+        <p class="center">Hiring an experienced designer is expensive and only having one is restrictive.  We offer a team of experts that work together, growing your brand and silencing the competition.</p>
       </div>
-
   </div>
+
 
 </div>
 </div>
