--- a/index.html
+++ b/index.html
@@ -3,22 +3,11 @@ layout: default
 ---
 
 {% include nav.html %}
-<!-- <div class="header">
-  <div class="video-container">
-    <video  autoplay volume="0" poster="posterimage.jpg">
-      <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
-
-    </video>
-  </div>
-
-</div>
- -->
-
 <div class="parallax-container">
-    <div class="parallax"><video  autoplay loop volume="0" poster="img/WK_WebBkgrd1920x1080.jpg">
+    <div class="parallax">
+    <video  autoplay loop volume="0" poster="img/161616.png">
       <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
       <source src="https://" type="video/">
-
     </video>
     </div>
     <div  id="home" class="row section scrollspy">
@@ -50,14 +39,12 @@ layout: default
      </div>
     </div>
 </div>
-  <div class="section white get-kreative">
+<div class="section white get-kreative">
 <div id="work" class="section scrollspy get-kreative">
   <div class="black">
       <h1 class="header center uppercase white-text">Get Kreative</h1>
       <p  class="center white-text">At WEKREATIVE, our goal is to provide creative direction, strategic thinking and <br> experienced execution to launch, grow or revitalize your business or organization.</p>
   </div>
-
-
   <div class="row">
     <div class="col  s6 m3">
       <img src="img/WK_Web_Icons_1a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_1b.png'" onmouseout="this.src='img/WK_Web_Icons_1a.png'">
@@ -83,32 +70,63 @@ layout: default
     <div class="col  s6 m3">
       <img src="img/WK_Web_Icons_8a.png" width="100%" alt="" onmouseover="this.src='img/WK_Web_Icons_8b.png'" onmouseout="this.src='img/WK_Web_Icons_8a.png'">
     </div>
-
-      <div class="col s6 m3 icons">
-        <img src="img/WK_ContractIcons_1.png" alt="" width="100%">
-        <h4 class="uppercase center">Month-to-Month</h4>
-        <p class="center">Our work produces immediate results and is produced to afford ultimate flexibility.</p>
-      </div>
-      <div class="col s6 m3">
-        <img src="img/WK_ContractIcons_3.png" alt="" width="100%">
-        <h4 class="uppercase center">No long-term contracts</h4>
-        <p class="center">We believe in relationships, not long-term contracts.  Our work speaks for itself.</p>
-      </div>
-      <div class="col s6 m3">
-        <img src="img/WK_ContractIcons_4.png" alt="" width="100%">
-        <h4 class="uppercase center">A-la-carte</h4>
-        <p class="center">We understand not all organizations require the same services.  Our model is built on offering as much or little as you need.</p>
-      </div>
-      <div class="col s6 m3">
-        <img src="img/WK_ContractIcons_2.png" alt="" width="100%">
-        <h4 class="uppercase center">Cheaper than adding staff</h4>
-        <p class="center">Hiring an experienced designer is expensive and only having one is restrictive.  We offer a team of experts that work together, growing your brand and silencing the competition.</p>
-      </div>
+  </div>
+  </div>
+</div>
+<div id="grey" class="section">
+  <div id="grey-row" class="row">
+    <div class="col s6 m3">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/WK_ContractIcons_1.png">
+            </div>
+            <div class="card-content">
+              <h4 class="center uppercase bold">Month-to-Month</h4>
+              <p>Our work produces immediate results and is produced to afford ultimate flexibility.</p>
+            </div>
+          </div>
+    </div>
+    <div class="col s6 m3">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/WK_ContractIcons_3.png">
+            </div>
+            <div class="card-content">
+              <h4 class="center uppercase bold">No long-term contracts</h4>
+              <p>We believe in relationships, not long-term contracts.  Our work speaks for itself.</p>
+            </div>
+          </div>
+    </div>
+    <div class="col s6 m3">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/WK_ContractIcons_2.png">
+            </div>
+            <div class="card-content">
+              <h4 class="center uppercase bold">A-la-carte</h4>
+              <p>We understand not all organizations require the same services.  Our model is built on offering as much or little as you need.</p>
+            </div>
+          </div>
+    </div>
+    <div class="col s6 m3">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/WK_ContractIcons_4.png">
+            </div>
+            <div class="card-content">
+              <h4 class="center uppercase bold">Cheaper than adding staff</h4>
+              <p>Hiring an experienced designer is expensive and only having one is restrictive.  We offer a team of experts that work together, growing your brand and silencing the competition.</p>
+            </div>
+          </div>
+    </div>
   </div>
 
+</div>
 
-</div>
-</div>
+
+
+
+
   <div id="about" class="parallax-container valign-wrapper section scrollspy" style="background-color: #161616; height: auto;">
       <div class="parallax">
       </div>
