--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
 </div>
 <div class="section white get-kreative">
 <div id="work" class="section scrollspy get-kreative">
-  <div class="black">
+  <div class="black" style="background-color: #161616;">
       <h1 class="header center uppercase white-text">Get Kreative</h1>
       <p  class="center white-text">At WEKREATIVE, our goal is to provide creative direction, strategic thinking and <br> experienced execution to launch, grow or revitalize your business or organization.</p>
   </div>
