--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
     <div class="parallax">
     <video  autoplay loop volume="0" poster="img/161616.png">
       <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
+      <img src="img/161616.png" alt="">
     </video>
     </div>
     <div  id="home" class="row section scrollspy">
@@ -14,19 +15,19 @@ layout: default
       <br>
       <div class="col s12 l8 offset-l2">
       <div class="row valign-wrapper">
-        <div class="col s3">
+        <div class="col s3 center">
           <h5 class="white-text center-align valign uppercase"><a href="#">Home</a></h5>
         </div>
-        <div class="col s3">
+        <div class="col s3 center">
           <h5 class="white-text center-align valign uppercase"><a href="#work">Work</a></h5>
         </div>
         <div class="col s4">
           <img class="center-align valign" src="{{ "/img/wekreative_transGOLD.png" | prepend: site.url }}" alt="" width="100%">
         </div>
-        <div class="col s3">
+        <div class="col s3 center">
           <h5 class="white-text center-align valign uppercase"><a href="#about">About</a></h5>
         </div>
-        <div class="col s3">
+        <div class="col s3 center">
           <h5 class="white-text  valign uppercase"><a href="#contact">Contact</a></h5>
         </div>
       </div>
