--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: default
 {% include nav.html %}
 <div class="parallax-container">
     <div class="parallax">
-    <video  autoplay loop volume="0" poster="img/161616.png">
+    <video  autoplay loop volume="0" poster="img/waves.png">
       <source src="videos/lightstock_345960_1080_user_43197746.mp4" type="video/mp4">
-      <img src="img/161616.png" alt="">
+      <img src="img/waves.png" alt="">
     </video>
     </div>
     <div  id="home" class="row section scrollspy">
